--- a/src/docs/jpa/용어정리.md
+++ b/src/docs/jpa/용어정리.md
@@ -19,6 +19,10 @@
 - SQL 과 유사하고 
 - RDBMS 엔티티를 다루는 쿼리를 만들때 사용 
 
+##### JPQL 특징 
+- JPQL 은 SQL을 추상화해서 특정 DB에 의존 X
+- 데이터베이스 dialect 만 변경하면 자연스럽게 데이터베이스를 변경할 수 있다.
+
 ### Hibernate 
 - ORM 구현체 - 프레임워크 중 하나 
 - 스프링 부트에서 채택한 메인 ORM 프레임워크 
