feat: 자바스크립트 비동기는 해당 함수를 기다리는 것을 멈춘다는게 아니라, 다른 함수들을 실행하는 것!!

--- a/src/node_js/js/비동기.md
+++ b/src/node_js/js/비동기.md
@@ -112,6 +112,8 @@ console.log(showName()); // WANE
 - 이외에는 모두 async / await를 사용하는 것이 좋다
 - 읽기 편한 코드가 디버깅에 유리하기 때문
 
+- **비동기란, 해당 함수를 기다리지 않고 다음 코드를 실행하는 것!!!!!!!!!!!!**
+
 | 구분    | callback                    | promise         | async/await       |
 |-------|-----------------------------|-----------------|-------------------|
 | 에러 처리 | 콜백 함수 내                     | catch() 메서드로 처리 | try-catch 블록으로 처리 |
